# reversalbot

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md  config.example.yaml
docs/: 01_philosophy.md  02_risk_model.md  03_failure_modes.md  04_execution_spec.md  05_strategy_spec.md  06_backtesting_spec.md  07_operating_manual.md  08_glossary.md  09_do_not_do.md
src/reversalbot/: __init__.py  cli.py  config.py  errors.py  logging.py  main.py
src/reversalbot/domain/: __init__.py  models.py
src/reversalbot/execution/: __init__.py  interfaces.py  mock_broker.py  order_router.py
src/reversalbot/manual_control/: __init__.py  control.py  emergency_stop.py  flatten.py  pause.py
src/reversalbot/monitoring/: __init__.py  alert_sink.py  alerts.py  anomaly.py  anomaly_detection.py  health.py  heartbeat.py
src/reversalbot/risk/: __init__.py  drawdown_guard.py  exposure_limits.py  kill_switch.py  position_sizing.py  stop_manager.py
tests/: test_anomaly_detection.py  test_config.py  test_drawdown_guard.py  test_kill_switch.py  test_mock_broker.py  test_order_router.py  test_order_router_idempotency.py  test_position_sizing.py
