[tool.poetry]
name = "reversalbot"
version = "0.1.0"
description = "Safety-first trading system scaffold (Stage 1)."
authors = ["ReversalBot Contributors"]
readme = "README.md"
packages = [{ include = "reversalbot", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pydantic = "^2.7.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[tool.poetry.scripts]
reversalbot = "reversalbot.main:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_no_return = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = ["yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
