[tool.poetry]
name = "reversalbot"
version = "0.1.0"
description = "Stage 1 scaffold for the ReversalBot project"
authors = ["ReversalBot Team <team@example.com>"]
readme = "README.md"
packages = [{ include = "reversalbot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.4"
mypy = "^1.9.0"
types-PyYAML = "^6.0.12.20240311"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C4",
    "RUF",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
strict_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
