[tool.poetry]
name = "reversalbot"
version = "0.1.0"
description = "Safety-first reversal trading bot scaffold."
authors = ["OpenAI Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "reversalbot", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.0"
mypy = "^1.10.0"
types-PyYAML = "^6.0.12.20240311"

[tool.poetry.scripts]
reversalbot = "reversalbot.main:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
